--- a/eshopProject/eshop.BusinessLayer/eshop.BusinessLayer.csproj
+++ b/eshopProject/eshop.BusinessLayer/eshop.BusinessLayer.csproj
@@ -41,7 +41,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abstract\ICategoryServices.cs" />
+    <Compile Include="Abstract\IProductServices.cs" />
     <Compile Include="Concreate\CategoryManager.cs" />
+    <Compile Include="Concreate\ProductManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
