--- a/eshopProject/eshop.Web.Tests/eshop.Web.Tests.csproj
+++ b/eshopProject/eshop.Web.Tests/eshop.Web.Tests.csproj
@@ -97,6 +97,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\CategoryTest.cs" />
+    <Compile Include="Tests\ProductTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
