--- a/eshopProject/eshop.Web/eshop.Web.csproj
+++ b/eshopProject/eshop.Web/eshop.Web.csproj
@@ -155,6 +155,8 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="AutofacHelper\AutofacConfiguration.cs" />
+    <Compile Include="Controllers\CommentController.cs" />
+    <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Global.asax.cs">
@@ -265,9 +267,11 @@
     <Content Include="Views\Shared\_PartialSizes.cshtml" />
     <Content Include="Views\Shared\_PartialBrands.cshtml" />
     <Content Include="Views\Product\Details.cshtml" />
+    <Content Include="Views\Customer\Login.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Comment\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
