--- a/eshopProject/eshop.Web.Tests/eshop.Web.Tests.csproj
+++ b/eshopProject/eshop.Web.Tests/eshop.Web.Tests.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Tests\CategoryTest.cs" />
     <Compile Include="Tests\ColorTest.cs" />
     <Compile Include="Tests\CustomerTest.cs" />
+    <Compile Include="Tests\FavTest.cs" />
     <Compile Include="Tests\LoginTest.cs" />
     <Compile Include="Tests\ProductTest.cs" />
     <Compile Include="Tests\SizeTest.cs" />
