--- a/eshopProject/eshop.Web/eshop.Web.csproj
+++ b/eshopProject/eshop.Web/eshop.Web.csproj
@@ -157,6 +157,7 @@
     <Compile Include="AutofacHelper\AutofacConfiguration.cs" />
     <Compile Include="Controllers\CommentController.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
+    <Compile Include="Controllers\FavController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Global.asax.cs">
@@ -268,6 +269,7 @@
     <Content Include="Views\Shared\_PartialBrands.cshtml" />
     <Content Include="Views\Product\Details.cshtml" />
     <Content Include="Views\Customer\Login.cshtml" />
+    <Content Include="Views\Shared\_MenuNavPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
